--- a/works/index.html
+++ b/works/index.html
@@ -2,6 +2,10 @@
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
-layout: works
-title: Portfolio
+layout: works-single
+title: 개발자 포트폴리오
+category: 웹 개발자
+category_slug: web-development
+image: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.utoimage.com%2F%3Fm%3Dgoods.free%26mode%3Dview%26idx%3D22250682&psig=AOvVaw0Qrm8A86-gUyg7I5NKFJ_9&ust=1746679486235000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCICv8MHGkI0DFQAAAAAdAAAAABAE
+short_description: 개인 포트폴리오 웹사이트 제작 프로젝트입니다.
 ---
